--- a/deployment/app/nginx/conf.d/nginx-site.conf
+++ b/deployment/app/nginx/conf.d/nginx-site.conf
@@ -3,7 +3,7 @@ server {
     server_name vida.ir;
 
     location / {
-        proxy_pass http://tabibyab_app:8009;
+        proxy_pass http://app:8009;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
